# mai_oop_lab_05

./: CMakeLists.txt  README.md  dynamic_array.h  main.cpp
tests/: test.cpp
